--- a/doc/source/whatsnew/v0.15.2.rst
+++ b/doc/source/whatsnew/v0.15.2.rst
@@ -161,6 +161,7 @@ Other enhancements:
 - ``Panel`` now supports the ``all`` and ``any`` aggregation functions. (:issue:`8302`):
 
   .. ipython:: python
+     :okwarning:
 
      p = pd.Panel(np.random.rand(2, 5, 4) > 0.1)
      p.all()
