--- a/doc/source/whatsnew/v0.12.0.rst
+++ b/doc/source/whatsnew/v0.12.0.rst
@@ -317,22 +317,24 @@ Other Enhancements
 
   - ``pd.set_option()`` now allows N option, value pairs (:issue:`3667`).
 
-      Let's say that we had an option ``'a.b'`` and another option ``'b.c'``.
-      We can set them at the same time:
+    Let's say that we had an option ``'a.b'`` and another option ``'b.c'``.
+    We can set them at the same time:
 
-      .. ipython:: python
-         :suppress:
+    .. ipython:: python
 
-         pd.core.config.register_option('a.b', 2, 'ay dot bee')
-         pd.core.config.register_option('b.c', 3, 'bee dot cee')
+        In [31]: pd.get_option('a.b')
+        Out[31]: 2
 
-      .. ipython:: python
+        In [32]: pd.get_option('b.c')
+        Out[32]: 3
 
-         pd.get_option('a.b')
-         pd.get_option('b.c')
-         pd.set_option('a.b', 1, 'b.c', 4)
-         pd.get_option('a.b')
-         pd.get_option('b.c')
+        In [33]: pd.set_option('a.b', 1, 'b.c', 4)
+
+        In [34]: pd.get_option('a.b')
+        Out[34]: 1
+
+        In [35]: pd.get_option('b.c')
+        Out[35]: 4
 
   - The ``filter`` method for group objects returns a subset of the original
     object. Suppose we want to take only elements that belong to groups with a
