Stable my version of pandas 201904171544

--- a/doc/source/whatsnew/v0.10.0.rst
+++ b/doc/source/whatsnew/v0.10.0.rst
@@ -430,7 +430,7 @@ Updated PyTables Support
 
 - added mixed-dtype support!
 
-   .. ipython:: python
+   .. code-block:: ipython
 
         In [64]: df['string'] = 'string'
 
